--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,6 +7,10 @@ bind l select-pane -R
 bind-key -r C-h select-window -t :-
 bind-key -r C-l select-window -t :+
 
+# my act like vim
+bind q kill-pane
+bind Q kill-window
+
 # act like GNU screen
 unbind C-b
 set -g prefix C-a
