--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,8 +8,12 @@ bind-key -r C-h select-window -t :-
 bind-key -r C-l select-window -t :+
 
 # my act like vim
-bind q kill-pane
-bind Q kill-window
+bind x kill-pane
+bind q kill-window
+bind-key -r C-k resize-pane -U
+bind-key -r C-j resize-pane -D
+bind-key -r C-h resize-pane -L
+bind-key -r C-l resize-pane -R
 
 # act like GNU screen
 unbind C-b
