--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,15 +7,24 @@ bind l select-pane -R
 bind-key -r C-h select-window -t :-
 bind-key -r C-l select-window -t :+
 
+# act like GNU screen
+unbind C-b
+set -g prefix C-a
+
+# force a reload of the config file
+unbind r
+bind r source-file ~/.tmux.conf
+
+# quick pane cycling
+unbind ^A
+bind ^A select-pane -t :.+
+
+### CUSTOM ###
 # my act like vim
 bind x kill-pane
-bind q kill-window
+bind & kill-window
 bind-key -r C-k resize-pane -U
 bind-key -r C-j resize-pane -D
 bind-key -r C-h resize-pane -L
 bind-key -r C-l resize-pane -R
-
-# act like GNU screen
-unbind C-b
-set -g prefix C-a
 
