--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,7 +2,7 @@
 setw -g automatic-rename off
 
 # changing default shell
-set -g default-shell /bin/bash
+set -g default-shell /bin/zsh
 
 # act like vim
 setw -g mode-keys vi
