--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,6 +41,7 @@ bind ^A select-pane -t :.+
 set -g @tpm_plugins "              \
   tmux-plugins/tpm                 \
   tmux-plugins/tmux-sensible       \
+  tmux-plugins/tmux-resurrect      \
 "
 # Other examples:
 # github_username/plugin_name    \
